允许自定义实体NetworkId